public/src/scss/sidebar.scss
.sidebar__outer {
	position: relative;
	height: 100%;

	&:after {
		content: "";
		position: absolute;
		top: 0;
		left: 319px;
		bottom: 0;
		z-index: 11;
		width: 1px;
		background: rgba(0,0,51,.067);
	}
}

.sidebar {
	position: relative;
	width: 320px;
	height: 100%;
	background-color: #f7f7f7;
	overflow: auto;

	.app-container--with-notice & {
		&, &:after {
			top: 40px;
		}
	}

	.itemlist {
		margin-left: 0;
		margin-right: 0;
	}

	&__head {
		padding: 0 10px;
		border-bottom: 1px solid #ccc;
		user-select: none;
		-webkit-app-region: drag;

		body.electron & {
			padding-left: 75px;
		}

		h1 {
			margin: 0;
			padding: 10px 0;
			line-height: 20px;
		}

		.version {
			font-size: 75%;
			font-weight: normal;
			color: #99a;
			line-height: 1em;
		}

		a {
			-webkit-app-region: no-drag;
		}
	}

	&__list {
		position: relative;
		border-top: 1px solid #ccc;
	}

	&__list .itemlist {
		margin-top: 0;
	}

	&__list-head {
		padding: 10px 0;
		border-bottom: 1px solid #ccc;
	}

	&__tabs {
		padding: 0 4px;
	}

	&__sort {
		position: absolute;
		top: 10px;
		right: 0;
		padding: 0 4px;
	}

	&__sort p {
		display: inline-block;
		margin: 0;
		opacity: .5;
	}

	&--user button.user,
	&--channel button.channel,
	&--alpha button.alpha,
	&--activity button.activity {
		font-weight: bold;
	}

	&--user #channellist, &--channel #userlist {
		display: none;
	}

	&__close {
		display: none;
	}

	&__open {
		z-index: 9;
	}

	&__close, &__open {
		position: absolute;
		top: 0;
		left: 0;
		padding: 12px 10px 6px 13px;

		body.electron & {
			left: 65px;
		}
	}

	.app-container--with-notice &__open {
		top: 40px;
	}

	.highlightslink--highlighted {
		background-color: #fff0aa;
	}

	.menu__link .badge {
		position: absolute;
		right: 10px;
	}

	.menu__link .badge,
	&__tabs .badge,
	&__list .badge {
		background-color: #b9af7c;
		color: #fff;
		padding: 2px 6px;
		border-radius: 8px;
		line-height: 1em;
		font-weight: bold;
		font-style: normal;
	}

	&__tabs .badge,
	&__list .badge {
		display: inline-block;
	}

	&__tabs .badge {
		margin-left: 4px;
	}

	.switcher {
		button, a {
			color: #556;
		}
	}

	@media #{$mobile-media} {
		/* Sidebar actually an overlay */

		position: fixed;
		top: 0;
		bottom: 0;
		left: 0;
		z-index: 10;

		box-shadow: 0 0 60px 0 rgba(0,0,0,.5);
		transition: .5s left ease-in-out;

		&__outer:after {
			display: none;
		}

		&__close {
			display: block;
		}

		&__head h1 {
			margin-left: 30px;
		}

		&--hidden {
			left: -380px;
		}
	}
}

